apps/base/random/mc-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gaming-pc-proxy
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mc.${base_domain}`)
      kind: Rule
      services:
        - name: gaming-pc-service
          port: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: gaming-pc-service
spec:
  type: ExternalName
  externalName: 192.168.100.112
  ports:
    - port: 8123
      targetPort: 8123
